--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.md
-recursive-exclude sample *
-prune sample
+recursive-include django_twitter_auth/tests *
+recursive-exclude example *
+prune example
